<resources>
    <string name="app_name">Rybovnicek</string>
    <string name="getDistricts">Nejbližší revíry</string>
    <string name="district_name">Jméno revíru</string>
    <string name="ev_number">Ev. číslo: %s</string>
    <string name="detail">Detail revíru</string>
    <string name="show_spoil">Zobrazit úlovky</string>
    <string name="add_fish">Přidat úlovek</string>
    <string name="new_fish">Přidání úlovku</string>
    <string name="form_districtName">Revír: %s</string>
    <string name="fish_type">Druh:</string>
    <string name="fish_length">Míra:</string>
    <string name="date_hint">Datum</string>
    <string name="type_hint">Druh ryby</string>
    <string name="length_hint">Míra (cm)</string>
    <string name="fish_update">Upravit</string>
    <string name="fish_remove">Odstranit</string>
    <string name="fish_menu_title">Vyberte akci</string>
    <string name="form_update">Upravit úlovek</string>
    <string name="distance">%.2f km</string>
    <string name="cmLength">%d cm</string>
    <string name="remove_fish_title">Odstranit úlovek</string>
    <string name="romve_fish_text">Opravdu chcete odstranit úlovek %s - %d cm?</string>
    <string name="empty_list">Žádný záznam</string>
    <string name="fish_list_title">Seznam úlovků - %s</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="district_header">Moravský rybářský svaz</string>
    <string name="sync_header">Sync</string>

    <!-- Preferences -->
    <string name="trout">Pstruhové revíry</string>
    <string name="not_trout">Mimopstruhové revíry</string>
    <string name="show_trout_distr">Zobrazit pstruhové revíry</string>
    <string name="show_not_trout_distr">Zobrazit mimopstruhové revíry</string>
    <string name="empty_distr_list">Nejsou vybrány žádné revíry (nastavení).</string>
</resources>